--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,25 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box;
+  list-style: none;
+  /* font-size: 62.5%; */
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+::selection {
+  background-color: red;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+:root {
+  /* --mid-size: 2.8rem; */
 }
 
-@keyframes App-logo-spin {
+/* @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
   }
-}
+} */
