--- a/src/components/layout/Dashboard/Dashboard.css
+++ b/src/components/layout/Dashboard/Dashboard.css
@@ -3,3 +3,8 @@
   align-items: center;
   justify-content: space-around;
 }
+/* 
+.dash--clients {
+  background-color: red;
+  font-size: var(--extra-large-size);
+} */
