--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,13 @@
-body {
+* {
+  box-sizing: border-box;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+  sans-serif;
+  list-style: none;
+  /* font-size: 62.5%; */
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  text-decoration: none;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -11,4 +15,17 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+:root {
+  --extra-small-size: 1.2rem;
+  --small-size: 2rem; 
+  --mid-size: 2.8rem;
+  --large-size: 3.6rem;
+  --extra-large-size: 4.4rem;
+}
+
+::selection {
+  background-color: red;
+  color: white;
 }
